<resources>
    <string name="app_name">Employee ListView</string>
    <string name="employee_list">Employee List</string>
    <string name="employee">Employee</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="age">age</string>
    <string name="email">e-mail</string>
    <string name="mobile_number">mobile number</string>
    <string name="role">role</string>
    <string name="password">password</string>
    <string name="btn_register">register</string>
    <string name="text_register">Register</string>
    <string name="text_cancel">Cancel</string>
    <string name="btn_register_new_employee">Register new</string>
</resources>